use requirejs for dependency management

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "exoskeleton": "*",
+    "requirejs": "*",
     "exoskeleton.localStorage": "~1.0.0"
   },
   "license": "MIT",
