--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "exoskeleton": "*",
     "requirejs": "*",
+    "requirejs-text": "*",
     "exoskeleton.localStorage": "~1.0.0"
   },
   "license": "MIT",
